@@ -1,6 +1,9 @@
 # ChangeLog for media-video/istanbul
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/istanbul/ChangeLog,v 1.16 2010/06/13 19:26:42 arfrever Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/istanbul/ChangeLog,v 1.17 2011/02/23 13:15:30 eva Exp $
+
+  23 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org> -istanbul-0.2.1.ebuild:
+  Clean up old revision.
 
   13 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   istanbul-0.2.1.ebuild, istanbul-0.2.2.ebuild:
